<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园拼客</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_label">校园拼客</string>
	<string name="hint_enter_search_content">输入搜索内容</string>
	<string name="loading_and_waiting">正在为您加载，请稍后</string>
	
	<!-- XlistView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    
    <string name="just_now">刚刚</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="begin_time_at">开始时间：%s</string>
    <string name="end_time_at">结束时间：%s</string>
    <string name="before_minute">%s分钟前</string>
    <string name="category_at">类型：%s</string>
	<string name="place_at">地点：%s</string>
	<string name="join_and_last_number" formatted="false">已报名：%1s人/还差：%2s人</string>
	<string name="join_number" >已报名：%s人</string>
	<string name="need_number">人数：%s</string>
	<string name="launch">发起人：%s</string>
	
	 <string name="title_detail">活动详情</string>
	 
	
    <!-- 提示 -->
    <string name="alert_no_empty">输入值不能为空</string>
	<string name="alert_no_network">无法连接网络，请检查网络设置</string>
	<string name="alert_fail_network">发送网络请求失败</string>
	<string name="alert_fail_check_error">版本检测失败</string>
	<string name="alert_download_error">下载出错</string>
	<string name="no_search_records">很抱歉，没有查询到相关内容！</string>
	
	<!-- 分享平台首页 -->
    <string name="click_and_reload">点击屏幕，重新加载</string>
    
    <!-- 用户注册 -->
  	<string name="sex">性别：</string>
   	<string name="school">所在学校：</string>
    <string name="h_service_are">所在城市：</string>
	<string name="h_password_confirm">密码确认：</string>
	<string name="h_new_password">新密码：</string>
	<string name="title_i_register">用户注册</string>
	<string name="warn_account_not_empty">帐号不能为空！</string>
	<string name="user_name">用户名：</string>
	<string name="name">昵称：</string>
	<string name="tip_regist_info">请填写您的真实信息，以便参与各类活动</string>
	<string name="hint_id_card">身份证号：</string>
	<string name="h_phone">手机号码：</string>
	<string name="h_name">姓名：</string>
	<string name="h_email">邮箱：</string>
	<string name="warn_user_name_not_empty">用户名不能为空！</string>
	<string name="warn_id_card_not_empty">身份证号不能为空！</string>
	<string name="warn_invalid_id_card">输入的身份证号无效！</string>
	<string name="warn_school_not_empty">所在学校不能为空！</string>
	<string name="warn_email_not_empty">邮箱不能为空！</string>
	<string name="warn_service_area_not_empty">请选择所在城市</string>
	<string name="warn_name_not_empty">姓名不能为空！</string>
	<string name="accept_register_protocol">已阅读并同意《校园拼客服务协议》</string>
	<string name="sex_male">男生</string>
	<string name="sex_female">女生</string>   
	<string name="password">密码：</string>
	
	<!-- 个人中心 -->
	<string name="title_switch_account">切换手机号码</string>
   	<string name="title_other_account_login">其他帐号登录</string>
   	<string name="account">我的帐号（未登录）</string>
   	<string name="logout">注销</string>
   	<string name="alter_password">修改密码</string>
   	<string name="phone_number">手机号码：</string>
   	<string name="old_password">旧密码：</string>
   	<string name="loading_account_info">正在读取帐号信息&#8230;</string>
   	<string name="fail_loading_account_info">请求帐号信息失败！</string>
   	<string name="fail_detect_account_info">无法识别到手机号!您需要进行用户注册！</string>
   	<string name="register">注册</string>
   	<string name="forget_pwd">忘记密码?</string>
   	<string name="title_forget_pwd">忘记密码</string>
   	<string name="login">登录</string>
   	<string name="tip_enter_phone_number">请输入注册的手机号，将以短信的形式返回您的密码</string>
   	<string name="hint_phone_number">手机号码</string>
   	<string name="warn_phone_number_not_empty">手机号不能为空!</string>
   	<string name="warn_password_not_empty">密码不能为空</string>
   	<string name="logining">正在登录&#8230;</string>
   	<string name="validating">正在验证</string>
   	<string name="fail_login">请求登录失败！</string>
   	<string name="fail_alter_pwd">修改密码失败！</string>
   	<string name="fail_get_validate_code">获取验证码失败</string>
   	<string name="tip_need_sms_validate_code">为了确保身份的正确性，需要通过手机获取验证码</string>
   	<string name="validate_code">验证码</string>
   	<string name="hint_password">密码（最长12位，字母或数字）</string>
   	<string name="hint_enter_pwd_again">请再次输入密码</string>
   	<string name="fial_register">请求注册失败！</string>
   	<string name="hint_new_phone_number">新手机号</string>
   	<string name="hint_account_switch">当您的手机卡发生变更时,为保证帐号的真时性,请进行重新登录</string>
   	<string name="old_phone_number">原号码</string>
   	<string name="next_step">下一步</string>
   	<string name="auth_success">认证成功！</string>
   	<string name="auth_fail">账户认证失败</string>
   	<string name="success_login">登录成功</string>
   	<string name="processing">正在处理&#8230;</string>
   	<string name="fail_get_password">获取密码失败!</string>
   	<string name="original_password">原始密码：</string>
   	<string name="new_password">新密码：</string>
   	<string name="confirm_again">再次确认：</string>
   	<string name="submit">提交</string>
   	<string name="warn_need_original_password">请输入原密码!</string>
   	<string name="warn_need_new_pssword">请输入新密码!</string>
   	<string name="warn_need_confirm_again">请再次输入新密码!</string>
   	<string name="warn_different_two_password">两次新密码输入不一致，请重新输入!</string>
   	<string name="title_my_launch">我发起的活动</string>
   	<string name="title_my_join">我加入的活动</string>
   	<string name="title_join_user_list">参加活动的人员</string>
   	<string name="logout_and_clear">注销登录</string>
   	
   	<!-- 主页面hostTab -->
   	<string name="nav_public_service_activity">首页</string>
   	<string name="nav_volunteer_activity">发起活动</string>
   	<string name="nav_myself_activity">我</string>
   	
   	<!-- 个人资料 -->
   	<string name="ic_tittle">个人中心</string>
   	<string name="ic_i_info_tittle">我的资料</string>
   	<string name="ic_user_info_tittle">用户资料</string>
   	<string name="ic_service_time">%1s小时</string>
   	<string name="alter">修改</string>
   	<string name="fail_alter_account_info">修改失败</string>
   	<string name="title_alter_pwd">修改密码</string>
   	<string name="title_alter_info">修改个人资料</string>
   	
   	<!-- 公益活动 -->
   	<string name="i_want_to_join">我要参加</string>
   	<string name="i_want_unpublish">取消活动</string>
   	<string name="i_want_quit">退出活动</string>
   	<string name="finish">活动已结束</string>
   	<string name="join_and_need_number" formatted="false">已报名：%1s人/需求人数：%2s</string>
	<string name="contacts_of">联系方式：%s</string>
	<string name="share_title">活动标题：</string>
	<string name="share_cate">活动类型：</string>
	<string name="cate_meal">吃饭</string>
	<string name="cate_sport">运动</string>
	<string name="cate_tour">出游</string>
	<string name="share_start_time">开始时间：</string>
	<string name="share_end_time">结束时间：</string>
	<string name="share_place">活动地点：</string>
	<string name="share_num">活动人数：</string>
	<string name="share_contact">联系方式：</string>
	<string name="share_content">活动内容：</string>
	<string name="add_share">发布</string>
	<string name="title_alter_add_share">发起活动</string>
	<string name="fail_add_share">发起活动失败！</string>
	<string name="warn_title_not_empty">标题不能为空！</string>
	<string name="warn_start_time_not_empty">开始时间不能为空！</string>
	<string name="warn_end_time_not_empty">结束时间不能为空！</string>
	<string name="warn_join_number_not_empty">活动人数不能为空！0为不限人数</string>
	<string name="warn_place_not_empty">地点不能为空！</string>
	<string name="warn_content_not_empty">内容不能为空！</string>
	<string name="see_more">查看报名人员></string>
</resources>
