<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header"/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
		
	    <TextView
	        android:layout_width="100dip"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="@string/name"
	        android:textColor="@android:color/black"
	        android:textSize="16sp" />

		<TextView android:id="@+id/name"
		    android:layout_width="0dip"
		    android:layout_weight="1.0"
		    android:singleLine="true"
		    android:layout_height="wrap_content">

		</TextView>
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sex"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/school"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/school"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:singleLine="true" />
    </LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
		
	    <TextView android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/h_phone"
            android:gravity="right"/>

		<TextView
		    android:id="@+id/phone"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:autoLink="phone"
		    android:singleLine="true" />

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
		
	    <TextView android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/h_email"
            android:gravity="right"/>

		<TextView
		    android:id="@+id/email"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:autoLink="email"
		    android:singleLine="true" />

	</LinearLayout>
	
	<Button
	    android:id="@+id/btn_alter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dip"
	    android:background="@drawable/btn_high_blue"
	    android:text="@string/alter"
	    android:textSize="18sp"
	    android:visibility="gone" />

</LinearLayout>
