<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_title"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:singleLine="true" >

                    <requestFocus />

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_cate"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/cateEmun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/meal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/cate_meal" />

                    <RadioButton
                        android:id="@+id/sport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cate_sport" />

                    <RadioButton
                        android:id="@+id/tour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cate_tour" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_start_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/startTime"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="datetime"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip"
                android:visibility="gone" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_end_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/endTime"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_place"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/place"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_num"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="0为不限人数"
                    android:inputType="number"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_contact"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:inputType="phone"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/share_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:hint="字数最多200字"
                    android:lines="5"
                    android:maxLength="200"
                    android:singleLine="true" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_addShare"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="@drawable/btn_high_blue"
                android:text="@string/add_share"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>