<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header"/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
		
	    <TextView
	        android:layout_width="100dip"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="@string/name"
	        android:textColor="@android:color/black"
	        android:textSize="16sp" />

		<EditText android:id="@+id/name"
		    android:layout_width="0dip"
		    android:layout_weight="1.0"
		    android:singleLine="true"
		    android:layout_height="wrap_content">

			<requestFocus />

		</EditText>
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sex"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/sexEnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="男生" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="女生" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/school"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/school"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:clickable="true"
            android:singleLine="true" />
    </LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
		
	    <TextView android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/h_phone"
            android:gravity="right"/>

		<EditText
		    android:id="@+id/phone"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:inputType="phone"
		    android:singleLine="true" />

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
		
	    <TextView android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/h_email"
            android:gravity="right"/>
		<EditText android:id="@+id/email"
		    android:layout_width="0dip"
		    android:layout_weight="1.0"
		    android:singleLine="true"
		    android:inputType="textEmailAddress"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<Button android:id="@+id/btn_alter"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:text="@string/alter"
	    android:textSize="18sp"
	    android:background="@drawable/btn_high_blue"
	    android:layout_margin="10dip"/>
</LinearLayout>
