<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/header"/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

       	  <TextView
       	      android:layout_width="100dip"
       	      android:layout_height="wrap_content"
       	      android:gravity="right"
       	      android:text="@string/original_password"
       	      android:textColor="@android:color/black"
       	      android:textSize="16sp" />

         <EditText android:id="@+id/password"
		    android:layout_width="0dip"
		    android:layout_weight="1"
		    android:singleLine="true"
		    android:layout_height="wrap_content"
		    android:maxLength="12">

             <requestFocus />

         </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/h_new_password"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:maxLength="12"
            android:singleLine="true" />
    </LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">
        <TextView android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/h_password_confirm"
            android:gravity="right"/>
	    <EditText android:id="@+id/confirm_password"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:singleLine="true"
		    android:maxLength="12"/>
	</LinearLayout>
	
	<Button android:id="@+id/btn_alter"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:text="@string/alter"
	    android:textSize="18sp"
	    android:background="@drawable/btn_high_blue"
	    android:layout_margin="10dip"/>
	
</LinearLayout>
